# Preploy

./: .dockerignore  .env.ci  .env.example  .gitignore  .graphifyignore  Backlog.md  CLAUDE.md  LICENSE  README.md  Tasks.md  docker-compose.yml  lighthouserc.json  package-lock.json  package.json  turbo.json  vercel.json
.claude/: settings.json  settings.local.json
.claude/agents/: backlog-groomer.md  branch-prep.md  design-reviewer.md  feature-implementer.md  pm-proposer.md  pr-reviewer.md  qa-tester.md  tech-lead-planner.md
.claude/commands/: issue-from-failure.md  migrate.md  precommit.md  refresh-graph.md  scaffold-route.md  standup.md  task.md
.claude/hooks/: precommit-gate.sh
.github/workflows/: ci.yml  lighthouse.yml
apps/api/: .coverage  CLAUDE.md  package.json  pyproject.toml
apps/api/app/: config.py  logging_config.py  main.py  schemas.py
apps/api/app/routers/: analysis.py  health.py
apps/api/app/services/: code_analyzer.py  feedback_generator.py  timeline_correlator.py
apps/api/tests/: conftest.py  test_code_analyzer.py  test_feedback_generator.py  test_timeline_correlator.py
apps/web/: .env.local.example  .gitignore  CLAUDE.md  Dockerfile  README.md  drizzle.config.ts  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  sentry.client.config.ts  vercel.json  (+3 more)
dev_logs/: Backlog-archive.md  Phase1_Tasks.md  Phase2_Tasks.md  Phase3.5_Tasks.md  Phase3_Tasks.md  aws-architecture.md  design-audit-2026-04.md  pricing-model.md  stripe-pro-update-2026-04.md
docs/: avatar-setup.md
(+450 files in other folders)
